Bug 156550 - Going back in dolphin doesn't return me to the position where I was in a long file list
Summary: Going back in dolphin doesn't return me to the position where I was in a long...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-24 16:02 UTC by Henrik Segesten
Modified: 2008-05-20 23:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Henrik Segesten 2008-01-24 16:02:34 UTC
Version:           1.0 (using KDE 4.0.0)
Installed from:    Gentoo Packages
Compiler:          GCC 4.1.2 
OS:                Linux

If I from a long list of directories navigate to one of the subdirectories and then chooses to go back or up I expect from Konqueror 3.5 to be returned to the position of the selected subdirectoy in the long list and not to the top of the list as is the case now.
Comment 1 Peter Penz 2008-01-24 16:13:04 UTC
Could you please specify which view mode you've used (icons, details, columns), as by using the back button the old position is (should be) remembered already. BTW: the up-button always resets the position to 0, as it acts like going into a new directory and hence extends the history... Thanks!
Comment 2 Henrik Segesten 2008-01-24 16:22:37 UTC
This occurs in both icons and details mode.
Comment 3 Peter Penz 2008-01-24 17:31:37 UTC
I just verified this with KDE 4.0.0 and cannot reproduce this issue. When using the back- and forward button the old position is restored (tested with icon-mode and details-mode).
Comment 4 FiNeX 2008-01-26 10:16:24 UTC
I cannot reproduce this bug too.
I've tried to open a long list of file and positioning at the bottom. After clicling back and forward I returned to the same position. I'm using a recent revision, maybe it has been fixed *after* the 4.0.0 version.
Comment 5 miro 2008-02-05 10:55:01 UTC
Yes this is also my experience.

For example: you are in /home/miro then scroll down 100px
click Mp3 folder.
click back.
The view is NOT scrolled down 100px.
The Mp3 Folder is NOT selected.

(Moreover, it seems that the scroll position just changes randomly sometimes).
So each history item should keep:
- scrollpos
- focused item

restore focused item always.
restore scroll if loading took < XXX seconds (eg. when we could load & sort etc the view before showing)


Comment 6 miro 2008-02-05 11:00:30 UTC
Additional info:
using qt-copy from svn
using a revision kde ~4 days old (build using kdesvn-build).

This BUG is NOT fixed for me.
I do have debug enabled, so please tell me where should I look to find out why it doesn't work...
Comment 7 Peter Penz 2008-02-05 11:39:39 UTC
Miro, could you please provide some additional infos (I cannot reproduce this issue, everything works fine here on 4.0.0, 4.0.1 and trunk):
- which Qt version are you using?
- which view mode are you using (icons, details, column)?
- is the wrong behavior 100 % reproducible or does it depend on whether e. g. a cold disk cache is used or not?
- does the wrong behavior only occur on some directories?
- how many items are in the directory when going back (just a rough number, I need to know whether it's about 100 or 10000...)

Thanks!
Comment 8 Henrik Segesten 2008-02-05 12:24:36 UTC
To chip in I see this issue with this info:

Qt: 4.3.3 from Gentoo Portage
View mode: both details and icons
It is quite strange for me since it seems to only occur when I am browsing directories with custom icons (ie album covers as set by amarok). It seems to work in other places. I have a folder containing 134 albums with some of the folders set to the album cover and the rest have no icon set at all. If I enter one of the folder some way down the list and then press back I am always returned to the top of the folder.
Comment 9 Peter Penz 2008-02-05 12:28:00 UTC
Thanks for the info, I've reopened the bug and will investigate...
Comment 10 miro 2008-02-05 21:46:45 UTC
I can't reproduce the scrolling issue with "back", maybe I clicked on the parent folder path element (in >home>miro>mp3). This is a separate issue (treat the parent dir as "go up" or if equal to the top history item as "back"?).
Sorry for the false alarm (I can't say anything about comment #8).

However the focus (selection) is lost (e.g. the directory from which we return is not selected).
The number of files seems to be irrelevant.
Qt is qt-copy from kde svn.
It is 100% reproducible.
Comment 11 Peter Penz 2008-02-05 22:39:22 UTC
@Miro:
> This is a separate issue (treat the parent dir as "go up" or
> if equal to the top history item as "back"?).

No, only the "back" button goes back in history. Going up means going to a new location and this adds a history entry.

> However the focus (selection) is lost (e.g. the directory
> from which we return is not selected). 

Yes, this should be fixed.

@Henrik: I tried to apply custom icons to music folders and still cannot reproduce the issue. Could you please check like Miro whether we really talk about the same here (= using the "Back" button in the toolbar)? Thanks ;-)
Comment 12 Henrik Segesten 2008-02-06 09:02:52 UTC
Yes the issue occurs when I press the back button in the toolbar. To clarify, when I say no icon it is not the regular blue folder icon but no icon at all. This has happened since I set the folder icons to album covers in KDE 3.5 and some of them haven't carried over to KDE4.
Comment 13 Peter Penz 2008-05-20 23:22:18 UTC
SVN commit 810493 by ppenz:

when going back in history apply the keyboard focus to the the previously shown directory

BUG: 156550
BUG: 158590

 M  +14 -0     dolphinview.cpp  
 M  +6 -0      dolphinview.h  
 M  +11 -5     dolphinviewcontainer.cpp  
 M  +3 -0      dolphinviewcontainer.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=810493