when going back in history apply the keyboard focus to the the previously shown directory

BUG: 156550
BUG: 158590

svn path=/trunk/KDE/kdebase/apps/; revision=810493